Cycles Spatial Splits BHV fails to complete build in scenes containing lots of hair along with SSS materials #48472

Closed
opened 2016-05-19 23:35:06 +02:00 by Adam Friesen · 7 comments

System Information
Win10 64 bit; Third Gen i7 CPU; ATI HD7xxx GPU; 24 gigs RAM

Blender Version
Broken: Hash 89df672
Worked: Hash f70b548 (May16)

Short description of error
When the scene contains enough hair and the object it attaches to contains an SSS material, the Spatial Splits BVH build phase will suddenly stop and stay that way until Esc is pressed. This is only a Spatial Splits problem as turning off that checkbox allows the render to go like it should (it looks like a recent commit may be causing the build to lock up at a certain point).

Exact steps for others to reproduce the error
Open the .blend file and try to render the scene

.blend
Cycles_FailedBVH.blend

**System Information** Win10 64 bit; Third Gen i7 CPU; ATI HD7xxx GPU; 24 gigs RAM **Blender Version** Broken: Hash 89df672 Worked: Hash f70b548 (May16) **Short description of error** When the scene contains enough hair and the object it attaches to contains an SSS material, the Spatial Splits BVH build phase will suddenly stop and stay that way until Esc is pressed. This is only a Spatial Splits problem as turning off that checkbox allows the render to go like it should (it looks like a recent commit may be causing the build to lock up at a certain point). **Exact steps for others to reproduce the error** Open the .blend file and try to render the scene **.blend** [Cycles_FailedBVH.blend](https://archive.blender.org/developer/F313648/Cycles_FailedBVH.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon
Adam Friesen changed title from Cycles Spatial Splits BHV build fails to complete build in scenes containing lots of hair along with SSS materials to Cycles Spatial Splits BHV fails to complete build in scenes containing lots of hair along with SSS materials 2016-05-19 23:36:50 +02:00
Sergey Sharybin was assigned by Aaron Carlisle 2016-05-20 00:06:46 +02:00
Sergey Sharybin removed their assignment 2016-05-20 10:21:55 +02:00
Brecht Van Lommel was assigned by Sergey Sharybin 2016-05-20 10:21:55 +02:00

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

This is caused by recent code refactor from Brecht in 93e4ae8.

@brecht, raised the concern, did inlined code comments in the revision.

This is caused by recent code refactor from Brecht in 93e4ae8. @brecht, raised the concern, did inlined code comments in the revision.

This issue was referenced by 9d19533117

This issue was referenced by 9d1953311774673453da4a8f33ff37c771762c49

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@91e570461a

This issue was referenced by blender/cycles@91e570461a7913ac6b00951f9d4064592ba9b956
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48472
No description provided.