Fix T48472: issue in array refactor, causing performance regression in BVH build.